# unisys-rs

./: .gitignore  Cargo.toml  README.md  aaa.ipynb  kak_decomposition.ipynb  local.rs  main.py  my-script.rs  nnn.ipynb  sss.rs
src/: lib.rs  main.rs
src/basic/: circuits.rs  gates.rs  matrices.rs  mod.rs  operations.rs
src/decompose/: mod.rs
src/mapping/: heuristic.rs  mod.rs
src/models/: hamiltonians.rs  mod.rs  paulis.rs
src/partition/: mod.rs
src/phoenix/: grouping.rs  mod.rs  ordering.rs  simplification.rs  utils.rs
src/transforms/: mod.rs  rebase.rs
src/transforms/mapping/: mirroring_sabre.rs  mod.rs  sabre.rs
src/utils/: arch.rs  functions.rs  mod.rs  ops.rs  passes.rs
