[package]
name = "unisys"
version = "0.1.0"
edition = "2021"

#[build]
#rustflags = ["-L/opt/homebrew/opt/openblas/lib", "-I/opt/homebrew/opt/openblas/include"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas"]}

[[bin]]
name = "unisys"
path = "src/main.rs"

[[bin]]
name = "partition"
path = "src/bin/partition.rs"

[[bin]]
name = "decompose"
path = "src/bin/decompose.rs"

[[bin]]
name = "map"
path = "src/bin/map.rs"

[[bin]]
name = "hierarchy"
path = "src/bin/hierarchy.rs"
